Replace use of String.format(..) with formatted Strings.
Closes #2751