@@ -324,12 +324,9 @@ public class RedisCache extends AbstractValueAdaptingCache {
 		Object cacheValue = preProcessCacheValue(value);
 
 		if (nullCacheValueIsNotAllowed(cacheValue)) {
-
-			String message = String.format("Cache '%s' does not allow 'null' values; Avoid storing null"
+			throw new IllegalArgumentException(("Cache '%s' does not allow 'null' values; Avoid storing null"
 					+ " via '@Cacheable(unless=\"#result == null\")' or configure RedisCache to allow 'null'"
-					+ " via RedisCacheConfiguration", getName());
-
-			throw new IllegalArgumentException(message);
+					+ " via RedisCacheConfiguration").formatted(getName()));
 		}
 
 		return cacheValue;
@@ -440,11 +437,9 @@ public class RedisCache extends AbstractValueAdaptingCache {
 			return key.toString();
 		}
 
-		String message = String.format("Cannot convert cache key %s to String; Please register a suitable Converter"
-				+ " via 'RedisCacheConfiguration.configureKeyConverters(...)' or override '%s.toString()'",
-				source, key.getClass().getName());
-
-		throw new IllegalStateException(message);
+		throw new IllegalStateException(("Cannot convert cache key %s to String; Please register a suitable Converter"
+				+ " via 'RedisCacheConfiguration.configureKeyConverters(...)' or override '%s.toString()'")
+				.formatted(source, key.getClass().getName()));
 	}
 
 	private CompletableFuture<byte[]> retrieveValue(Object key) {
@@ -502,7 +497,7 @@ public class RedisCache extends AbstractValueAdaptingCache {
 			return "[" + stringJoiner + "]";
 		}
 
-		throw new IllegalArgumentException(String.format("Cannot convert cache key [%s] to String", key));
+		throw new IllegalArgumentException("Cannot convert cache key [%s] to String".formatted(key));
 	}
 
 	private byte[] createAndConvertCacheKey(Object key) {
