@@ -324,7 +324,7 @@ public class LettuceConnection extends AbstractRedisConnection {
 	@SuppressWarnings({ "rawtypes", "unchecked" })
 	public Object execute(String command, @Nullable CommandOutput commandOutputTypeHint, byte[]... args) {
 
-		Assert.hasText(command, () -> String.format("A valid command [%s] needs to be specified", command));
+		Assert.hasText(command, () -> "A valid command [%s] needs to be specified".formatted(command));
 
 		ProtocolKeyword commandType = getCommandType(command.trim().toUpperCase());
 
@@ -925,9 +925,8 @@ public class LettuceConnection extends AbstractRedisConnection {
 			return statefulClusterConnection.sync();
 		}
 
-		String message = String.format("%s is not a supported connection type", connection.getClass().getName());
-
-		throw new IllegalStateException(message);
+		throw new IllegalStateException("%s is not a supported connection type"
+				.formatted(connection.getClass().getName()));
 	}
 
 	protected RedisClusterAsyncCommands<byte[], byte[]> getAsyncDedicatedConnection() {
@@ -941,13 +940,13 @@ public class LettuceConnection extends AbstractRedisConnection {
 		if (connection instanceof StatefulRedisConnection<byte[], byte[]> statefulConnection) {
 			return statefulConnection.async();
 		}
+
 		if (asyncDedicatedConnection instanceof StatefulRedisClusterConnection<byte[], byte[]> statefulClusterConnection) {
 			return statefulClusterConnection.async();
 		}
 
-		String message = String.format("%s is not a supported connection type", connection.getClass().getName());
-
-		throw new IllegalStateException(message);
+		throw new IllegalStateException("%s is not a supported connection type"
+				.formatted(connection.getClass().getName()));
 	}
 
 	@SuppressWarnings("unchecked")
@@ -1079,8 +1078,7 @@ public class LettuceConnection extends AbstractRedisConnection {
 			try {
 				redisCommand.validateArgumentCount(args != null ? args.length : 0);
 			} catch (IllegalArgumentException ex) {
-				String message = String.format("Validation failed for %s command", command);
-				throw new InvalidDataAccessApiUsageException(message, ex);
+				throw new InvalidDataAccessApiUsageException("Validation failed for %s command".formatted(command), ex);
 			}
 		}
 	}
