@@ -166,13 +166,6 @@ public abstract class AbstractRedisCollection<E> extends AbstractCollection<E> i
 
 	@Override
 	public String toString() {
-
-		StringBuilder sb = new StringBuilder();
-
-		sb.append(String.format("%s for key:", getClass().getSimpleName()));
-		sb.append(getKey());
-
-		return sb.toString();
+		return "%s for key: %s".formatted(getClass().getSimpleName(), getKey());
 	}
-
 }
